<resources>
    <string name="app_name">Douin</string>
    <string name="register_douin">注册-Douin</string>
    <string name="user_name">用户名</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="repassword">重复密码</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="video_list_item">短视频描述</string>
    <string name="login_douin">登录 - DouIn</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="no_account_tip">没有账户？</string>
    <string name="register">注册</string>
    <string name="playorstop">PlayOrStop</string>
    <string name="default_video_desc">默认介绍</string>
    <string name="default_video_author">默认作者</string>
    <string name="default_star_num">默认点赞数量</string>
    <string name="no_video_yet">"你还没有录制过视频！"</string>
    <string name="created_date_self">默认创建时间</string>
    <string name="recommendation">推荐</string>
</resources>